app/styles/app.css
/* ... */
.purple-110                {color: #270f34;}
.purple-110                {color: #270f34;}  /* 110 + background */
.purple-120                {color: #230d2e;}
.purple-125                {color: #200c2b;}
.purple-130                {color: #1e0b28;}
.purple-135                {color: #1c0b25;}
.purple-140                {color: #1a0a22;}
.purple-145                {color: #18091f;}
.purple-150                {color: #15081c;}

.gray-50                   {color: #fafafa;}
.gray-75                   {color: #f0f0f0;}
.gray-85                   {color: #e6e6e6;}
.gray-100                  {color: #e1e1e1;}
.gray-200                  {color: #c7c7c7;}
.gray-300                  {color: #aeaeae;}
.gray-400                  {color: #949494;}  /* body copy (light gray) */
.gray-500                  {color: #7b7b7b;}
.gray-600                  {color: #616161;}
.gray-700                  {color: #484848;}  /* body copy */
.gray-800                  {color: #2e2e2e;}
.gray-850                  {color: #222222;}
.gray-900                  {color: #1c1c1c;}
.gray-950                  {color: #151515;}


/* 3. Spacing */
/* Custom spacing classes to be removed */
.m-t-0{margin-top:0px}
.m-t-10{margin-top:10px}
.m-t-15{margin-top:15px}
.m-t-20{margin-top:20px}
.m-t-25{margin-top:25px}
.m-t-30{margin-top:30px}
.m-t-35{margin-top:35px}
.m-t-40{margin-top:40px}
.m-t-45{margin-top:45px}
.m-t-50{margin-top:50px}
.m-t-55{margin-top:55px}
.m-t-60{margin-top:60px}
.m-t-65{margin-top:65px}
.m-t-70{margin-top:70px}
.m-t-75{margin-top:75px}
.m-t-80{margin-top:80px}
.m-t-85{margin-top:85px}
.m-t-90{margin-top:90px}
.m-t-95{margin-top:95px}
.m-t-100{margin-top:100px}
.m-b-0{margin-bottom:0px}
.m-b-10{margin-bottom:10px}
.m-b-15{margin-bottom:15px}
.m-b-20{margin-bottom:20px}
.m-b-25{margin-bottom:25px}
.m-b-30{margin-bottom:30px}
.m-b-35{margin-bottom:35px}
.m-b-40{margin-bottom:40px}
.m-b-45{margin-bottom:45px}
.m-b-50{margin-bottom:50px}
.m-b-55{margin-bottom:55px}
.m-b-60{margin-bottom:60px}
.m-b-65{margin-bottom:65px}
.m-b-70{margin-bottom:70px}
.m-b-75{margin-bottom:75px}
.m-b-80{margin-bottom:80px}
.m-b-85{margin-bottom:85px}
.m-b-90{margin-bottom:90px}
.m-b-95{margin-bottom:95px}
.m-b-100{margin-bottom:100px}
.p-t-0{padding-top:0px}
.p-t-10{padding-top:10px}
.p-t-15{padding-top:15px}
.p-t-20{padding-top:20px}
.p-t-25{padding-top:25px}
.p-t-30{padding-top:30px}
.p-t-35{padding-top:35px}
.p-t-40{padding-top:40px}
.p-t-45{padding-top:45px}
.p-t-50{padding-top:50px}
.p-t-55{padding-top:55px}
.p-t-60{padding-top:60px}
.p-t-65{padding-top:65px}
.p-t-70{padding-top:70px}
.p-t-75{padding-top:75px}
.p-t-80{padding-top:80px}
.p-t-85{padding-top:85px}
.p-t-90{padding-top:90px}
.p-t-95{padding-top:95px}
.p-t-100{padding-top:100px}
.p-b-0{padding-bottom:0px}
.p-b-10{padding-bottom:10px}
.p-b-15{padding-bottom:15px}
.p-b-20{padding-bottom:20px}
.p-b-25{padding-bottom:25px}
.p-b-30{padding-bottom:30px}
.p-b-35{padding-bottom:35px}
.p-b-40{padding-bottom:40px}
.p-b-45{padding-bottom:45px}
.p-b-50{padding-bottom:50px}
.p-b-55{padding-bottom:55px}
.p-b-60{padding-bottom:60px}
.p-b-65{padding-bottom:65px}
.p-b-70{padding-bottom:70px}
.p-b-75{padding-bottom:75px}
.p-b-80{padding-bottom:80px}
.p-b-85{padding-bottom:85px}
.p-b-90{padding-bottom:90px}
.p-b-95{padding-bottom:95px}
.p-b-100{padding-bottom:100px}
.special-space-btn{margin-right:15px!important;}

/* 4. Body */
body,html,#app,.app-landing,.body-main{min-height:100%;min-width:inherit;}
body{font-family:'Lato',sans-serif;font-size:14px;}
.app-wrap-profiles{width:100%;min-height:100%;background:#fafafa;background:-webkit-linear-gradient(top,#fafafa 0%,#f2f2f2 100%);}
.site-wrapper{display:flex;flex-direction:column;min-height:100%;padding:35px;}
.home-screen-wrap{width:100%;min-height:100%;background:#FAFAFA;}
.home-screen{width:100%;min-height:100%;background:#FAFAFA;}

/* 5. Links */
a {color: #E91E63;}

/* 9. Fonts */
.h5-landing{color:#AEAEAE;font-size:18px;font-weight:400;}
.h1-modern{font-family:'Source Code Pro',monospace!important;font-size:1.25rem;font-weight:400;}

/* 12. Buttons */
.btn{font-family:'Source Code Pro',monospace;padding:0.5625rem 2.5rem;font-size:0.8125rem;font-weight:400;line-height:1.75rem;border-radius:0!important;-webkit-transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-ms-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;transition:all .2s ease-in-out;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
.btn-xs{font-size:0.75rem;padding:0.375rem 2.125rem;line-height:1rem;}
.btn-sm{font-size:0.75rem;padding:0.375rem 2.125rem;line-height:1.5rem;}
.btn-lg{font-size:0.875rem;padding:0.6875rem 3.4375rem;line-height:1.75rem;}
.btn:focus,.btn:active:focus,.btn.active:focus{outline:none;}
.btn-default{color:#fff;border:1px solid #2C96FF;background-color:#2C96FF;}
.btn-primary{background-color:#270F34;border:1px solid #270F34;}
.btn-outline-primary{color:#270F34;background-color:#fff;border:1px solid #270F34;}
.btn-side-secondary{font-family:'Source Code Pro',monospace;color:#270F34;border:1px solid #fff;border-right:none;border-radius:0;background-color:#f5f5f5;}
.btn-outline-primary:hover,.btn-outline-primary:focus,.btn-outline-primary:active,.btn-default:hover,.btn-default:focus,.btn-default:active,.btn-secondary:hover,.btn-secondary:focus,.btn-secondary:active{color:#fff;border:1px solid #2275d7;background-color:#2275d7;}
.btn-blue{color:#fff;border:1px solid #2C96FF;background-color:#2C96FF;padding-right:1.375rem;padding-left:1.375rem;-moz-border-radius:0px;-webkit-border-radius:0px;border-radius:0px;-webkit-box-shadow:0px 0px 25px 0px rgba(0,0,0,0.08);-moz-box-shadow:0px 0px 25px 0px rgba(0,0,0,0.08);box-shadow:0px 0px 25px 0px rgba(0,0,0,0.08);}
.btn-blue:hover,.btn-blue:focus,.btn-blue:active{color:#fff;border:1px solid #2378CC;background-color:#2378CC;}
/* ... */

